--- a/labs/lab_01/convert_temps.html
+++ b/labs/lab_01/convert_temps.html
@@ -8,7 +8,7 @@
     <main>
         <h1>Convert from Fahrenheit to Celsius</h1>
         <script>
-
+            alert("ALERT MEESSAGE");
         </script>
     </main>
 </body>
