--- a/labs/lab_06/index.html
+++ b/labs/lab_06/index.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Test Score Array</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Test Score Array</title>
     <link rel="stylesheet" href="test_scores.css" />
 </head>
-<body>
-	<main>
-		<h1>Use a Test Score array</h1>
-		<div>
-			<label for="name">Name:</label>
-			<input type="text" id="name">
-			<span></span>
-		</div>
-		<div>
-			<label for="score">Score:</label>
-			<input type="text" id="score">
-			<span></span>
-		</div>
-		<div>
-			<label></label>
-			<input type="button" id="add" value="Add to Array">
-			<input type="button" id="display_results" value="Display Results">
-			<input type="button" id="display_scores" value="Display Scores">
-		</div>
-		<div id="results"></div>
-		<div id="scores"></div>
-	</main>
-	<script src="test_scores.js"></script>
-</body>
-</html>
 
+<body>
+
+    <main>
+
+        <h1>Use a Test Score array</h1>
+
+        <label for="name">Name:</label>
+        <input type="text" id="name">
+        <span id="nameError" class="error"></span><br>
+
+        <label for="score">Score:</label>
+        <input type="text" id="score">
+        <span id="scoreError" class="error"></span><br>
+
+        <label>&nbsp;</label>
+
+        <input type="button" id="add" value="Add to Array">
+        <input type="button" id="display_results" value="Display Results">
+        <input type="button" id="display_scores" value="Display Scores"><br>
+
+        <h2>Results</h2>
+
+        <div id="results"></div>
+
+        <h2>Scores</h2>
+
+        <table id="scores_table"></table>
+
+    </main>
+
+    <script src="test_scores.js"></script>
+
+</body>
+
+</html>
