--- a/labs/lab_10/index.html
+++ b/labs/lab_10/index.html
@@ -13,12 +13,8 @@
 		<h1>Murach's HTML5 and CSS3 (4th Edition)</h1>
         <!-- Tabs HTML code -->
         <div id="tabs">
-            <ul>
-                <li><a href="#tabs-1">Book description</a></li>
-                <li><a href="#tabs-2">About the authors</a></li>
-                <li><a href="#tabs-3">Who this book is for</a></li>
-            </ul>
-            <div id="tabs-1">
+				<h3>Book description</h3>
+				<div>
                 <p>Murach's HTML5 and CSS3 provides all HTML and CSS a professional needs, and it 
 				adds coverage of Flexible Box and Grid Layout, two new CSS3 ways to implement page 
 				layouts. So whether you're a web designer, a JavaScript programmer, a server-side 
@@ -33,8 +29,10 @@
 				you've learned all the skills that you need, this book becomes the best on-the-job 
 				reference you've ever used.</p>
             </div>
-            <div id="tabs-2">
-                <p><strong>Anne Boehm</strong> has over 30 years of experience as an enterprise programmer. She got 
+
+            <h3>About the authors</h3>
+            <div>
+			<p><strong>Anne Boehm</strong> has over 30 years of experience as an enterprise programmer. She got 
 				started with Visual Basic in the days of VB5 and has been programming on .NET since 
 				its inception. She added C# to her programming repertoire in the mid-2000s, and she's 
 				authored or co-authored our books on Visual Basic, C#, ADO.NET, ASP.NET, and HTML5/CSS3.</p>
@@ -44,7 +42,8 @@
 				Gateway, Intuit, Peachtree, Dell, and Microsoft. He has authored or co-authored our 
 				books on HTML5/CSS3, jQuery, and Dreamweaver CC.</p>
             </div>
-            <div id="tabs-3">
+			<h3>Who this book is for</h3>
+            <div>
                 <p>Due to our unique presentation methods and this book's modular organization,
 				this is the right book for any web developer who wants to use HTML5 and CSS3 effectively. That 
 				includes:</p>
@@ -64,7 +63,10 @@
     <!-- jQuery call to the tabs() method. -->
     <script>
 		$(document).ready( () => {
-			$("#tabs").tabs();
+			$("#tabs").accordion({
+                heightStyle: "content",
+                collapsible: true
+            });
 		});
 	</script>
 </body>
